Learned more about data types

--- a/2_dataTypes/2.1_numericTypes/2.1.4_arithmeticPrecedence.ipynb
+++ b/2_dataTypes/2.1_numericTypes/2.1.4_arithmeticPrecedence.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Boolean\n"
+    "# Arithmetic Precedence  "
    ]
   },
   {
@@ -16,36 +16,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n"
+      "-1\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "# Booleans are often used in conditional statements and loops to \n",
-    "# control the flow of a program\n",
-    "print(10 == 10) # True\n",
-    "print(2 > 10) # False "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "# bool() can be used to evaluate an item is true or false \n",
-    "print(bool(10)) # True\n",
-    "print(bool(0)) # False "
+    "# # Unary operator \" - \" have lower precedence than ** \n",
+    "print(-1 ** 4) # -1\n",
+    "# In the above case 1 ** 4 will be evaluated first \n",
+    "# and then the '-' will be performed \n",
+    "print((-1) ** 4) # 1"
    ]
   },
   {
@@ -57,19 +38,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "1\n",
-      "0\n",
-      "11\n"
+      "-20\n",
+      "-1\n"
      ]
     }
    ],
    "source": [
-    "# We can also have arithmetic with boolean as True is 1 and False is 0\n",
-    "print(True + True) # 2\n",
-    "print(True + False) # 1 \n",
-    "print(False + False) # 0\n",
-    "print(10 + True) # 11"
+    "# Unary operator have higher precedence than multiplication , division and  modulus \n",
+    "print(10 * -2) # -20\n",
+    "print(11 % -2) # -1\n"
    ]
   }
  ],
