Learned more about variables and numeric types

--- a/2_dataTypes/2.1_numericTypes/2.1.2_float.ipynb
+++ b/2_dataTypes/2.1_numericTypes/2.1.2_float.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,6 +27,28 @@
     "print(10.0 // 2) # 5.0\n",
     "print(10.0 * 2) # 20.0\n",
     "print(10.0 ** 2) # 100.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# is_integer()\n",
+    "# Used to determine if a floating-point number represents an integer value.\n",
+    "# The method returns True if the float is an integer, and False otherwise.\n",
+    "print(2.0.is_integer()) # True\n",
+    "print(2.3.is_integer())# False"
    ]
   }
  ],
