--- a/2_dataTypes/2.1_numericTypes/2.1.1_integers.ipynb
+++ b/2_dataTypes/2.1_numericTypes/2.1.1_integers.ipynb
@@ -13,6 +13,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Integers, floats, and complex numbers are immutable, which means their\n",
+    "# values cannot be changed after creation. When you perform operations on \n",
+    "# these types, new objects are created to represent the result.\n",
+    "a = 10\n",
+    "print(id(a)) # 1365684781584\n",
+    "a += 1\n",
+    "print(id(a)) # 1365684781616\n",
+    "# Address may be changed in each execution. Above values are just examples  \n",
+    "# Here we can see that the address of variable 'a' is changed after the increment operation \n",
+    "# which indicate the creation of new object \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Division is of two types / and // (floor division).\n",
     "# // takes the lower integer value of the result , avoiding the fractional part \n",
     "\n",
