--- a/2_dataTypes/2.1_numericTypes/2.1.3_complexNumbers.ipynb
+++ b/2_dataTypes/2.1_numericTypes/2.1.3_complexNumbers.ipynb
@@ -17,14 +17,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1+13j)\n"
+      "(1+13j)\n",
+      "(10+0j)\n"
      ]
     }
    ],
    "source": [
     "# In python j represents the imaginary part\n",
     "print(1 + 13j) # (1+13j)\n",
-    "# print(1 + 13i) # SyntaxError: invalid decimal literal"
+    "# print(1 + 13i) # SyntaxError: invalid decimal literal\n",
+    "\n",
+    "# Also the imaginary part should have a value or a number \n",
+    "# print(10 + j) # It is invalid \n",
+    "# NameError: Python will think `j` as a variable which is undeclared \n",
+    "print(10 + 0j) # (10+0j) , valid "
    ]
   },
   {
